--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
 easyocr==1.7.2
 python-dotenv==1.1.0
 openai==1.76.0
-pdfminer.six==20250416
+pdfminer.six==20250327
 Pillow==11.2.1
-pdf2image==1.17.0 
+pdf2image==1.17.0
+urllib3<2.0.0
+pdfplumber==0.11.6
+PyMuPDF==1.25.5
+rapidfuzz==3.13.0
+requests==2.32.3
+numpy==1.26.4
+tqdm==4.66.4
